2011-03-30 # 0.7.0-dev

[NEW] Redesigned Operation API.

[NEW] Dashboard module.

[NEW] Members cannot access the admin and don't see the Publishr menu.

[NEW] The TimeZone widget.

[NEW] Notify on site change.

[CHG] Using the new process for content rendering, the message of exceptions thrown during the
rendering of the page body are used as the page body. The HTTP header is altered with the exception
code and title.  




2011-03-10 # 0.6.0

[NEW] Multiple sites can now be handled with a single Publishr installation.

[NEW] Configuration has now two parts, one global (for all the sites) and one local (for the site).
Configuration elements must use one or the other depending on the scope of their config.

[NEW] The "site.firstposition" module brings SEO features and the "site.search" module brings
search features.

[NEW] Cosmetic updates. The "combo" class can be used to identify element made of multiple
elements.

[NEW] Changed name from WdPublisher to Publishr.

[NEW] Widget API.

[NEW] WdConstructorModel class.

[CHG] Update to MooTools 1.3.

[CHG] Dashboard's config is now saved in the user's metas. 




2010-10-05 # 0.5.6

[NEW] Rewrote route handling and configuration.

[NEW] The 'publisher.publish' event is fired when publishing the document is done, just before the
result is output, giving a chance to listeners to modify the document.

[NEW] There is now a nice dashboard.

[NEW] Some improvements have been made to the interface, espacialy to the edit forms, sporting a new
'flat' style making the whole thing more integrated.

[NEW] Google Font Directory is now used to serve the Droid fonts used by the UI.

[NEW] While publishing the page, if the positions for the collected CSS and JS files are not
defined, collected CSS files are appened to the HEAD and collected JS files are appened to the
BODY.

[NEW] The route '/api/<module>/blocks/<name>' can now be used to retrieve blocks from modules.

[NEW] Edition interlocking is now supported across all modules.
