@@ -10,6 +10,8 @@
 
 [NEW] Notify on site change.
 
+[NEW] The 'properties:before' event of the "config" operation.
+
 [CHG] Using the new process for content rendering, the message of exceptions thrown during the
 rendering of the page body are used as the page body. The HTTP header is altered with the exception
 code and title.  
